[package]
name = "toby-pictures"
version = "0.1.0"
authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
lazy_static = "1.4"
log = "0.4.8"
rusoto_core = "0.44"
rusoto_cloudwatch = "0.44"
serde_json = "1.0"
hostname = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.21", features = ["full"] }

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "549c924"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
rev = "549c924"
features = ["handlebars_templates", "serve", "helmet"]
